force-app/main/default/objects/Opportunity/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>Quarter number</description>
    <formula>CEILING( MONTH ( CloseDate ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>