force-app/main/default/objects/Opportunity/fields/Quota_Line__c.field-meta.xml
<CustomField>
    <fullName>Quota_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Line</label>
    <referenceTo>Quota_Line__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>