force-app/main/default/objects/Opportunity/fields/Quota_Match__c.field-meta.xml
<CustomField>
    <fullName>Quota_Match__c</fullName>
    <formula>IF(NOT(IsClosed) &amp;&amp; ISBLANK(Quota_Line__c ) , false ,

    IF(IsClosed &amp;&amp; NOT(ISBLANK(Quota_Line__c )) , false ,
 

        IF( 

        AND(
            YEAR(Quota_Line__r.Quota_Date__c)= YEAR(Requested_Delivery_Date__c),
            MONTH(Quota_Line__r.Quota_Date__c)= MONTH(Requested_Delivery_Date__c),
            Quota_Line__r.Quota__r.Account__c = AccountId,
            TEXT(Quota_Line__r.Quota__r.PMC_Global_Quota__c) = TEXT(PMC_Global_Opp__c) ,
            IF( AND( Probability &gt;=0.2, TEXT(Quota_Line__r.Category__c) = &quot;Expected revenue &gt;=20% chance&quot;) , true, 
            IF( AND( Probability &lt;0.2, TEXT(Quota_Line__r.Category__c)  = &quot;Expected revenue &lt;20% chance&quot;) , true, false)

              )

           )

         , 
         true

     , 
     false

         )
     )

 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Match?</label>
    <type>Checkbox</type>
</CustomField>