force-app/main/default/objects/Opportunity/fields/Quote_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity__c</fullName>
    <formula>SyncedQuote.ExpirationDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Validity</label>
    <type>Date</type>
</CustomField>