force-app/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Delivery time</fullName>
            </value>
            <value>
                <fullName>Local Presence</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product specification based on NX Filtration model type</fullName>
            </value>
            <value>
                <fullName>Quick response time</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Technical Expertise</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Bid specification based toward other treatment method (not membrane filtration tech)</fullName>
            </value>
            <value>
                <fullName>Cannot meet/match product specification (e.g. material, membrane area, etc)</fullName>
            </value>
            <value>
                <fullName>End user/EPC/consultant preference over membrane suppliers</fullName>
            </value>
            <value>
                <fullName>End user/EPC direct purchase from membrane supplier and by-pass OEMs</fullName>
            </value>
            <value>
                <fullName>Lack of references</fullName>
            </value>
            <value>
                <fullName>No access to customer</fullName>
            </value>
            <value>
                <fullName>Opportunity identified too late</fullName>
            </value>
            <value>
                <fullName>Quotation sent too late</fullName>
            </value>
            <value>
                <fullName>Cannot get approval from local government</fullName>
            </value>
            <value>
                <fullName>End user company restructured or close down</fullName>
            </value>
            <value>
                <fullName>End user relocate plant to other site/country</fullName>
            </value>
            <value>
                <fullName>Financing issues</fullName>
            </value>
            <value>
                <fullName>Multiple bidders for same project</fullName>
            </value>
            <value>
                <fullName>Project cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>