force-app/main/default/objects/Opportunity/fields/Reason_for_reduced_probabilitu__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_reduced_probabilitu__c</fullName>
    <inlineHelpText>Please describe in here why probability should be reduced. e.g. 1) Uncertainty on order date (i.e. waiting for client budget approval or order date has been moved more than 3 times) ; 2) Our quote is only used for comparison against a (preferred) competitor; 3) Other: please specify

Please note that by selecting reduced probability, the probability will be reduced by 25% to a minimum of 5%.</inlineHelpText>
    <label>Reason for reduced probability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>