force-app/main/default/objects/Opportunity/fields/Reduced_probability_to_be_applied__c.field-meta.xml
<CustomField>
    <fullName>Reduced_probability_to_be_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please indicate reason: 1) Uncertainty on order date (i.e. waiting for client budget approval or order date has been moved more than 3 times) ; 2) Our quote is only used for comparison against a (preferred) competitor; 3) Other: please specify</inlineHelpText>
    <label>(E) Reduced probability to be applied</label>
    <type>Checkbox</type>
</CustomField>