force-app/main/default/objects/Opportunity/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>