force-app/main/default/objects/Opportunity/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>You can only select a use with the Role Pilot Engineer or Sales Engineer</errorMessage>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E09000002ODEu</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E09000002OFRY</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E09000002OFR9</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E09000002ODPO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>