force-app/main/default/objects/Opportunity/fields/Technology_specified_by_enduser__c.field-meta.xml
<CustomField>
    <fullName>Technology_specified_by_enduser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>1) NX Technology type is specified in New Business (i.e. Hollow Fibre NF) or NX is specified in replacement; 2) Successful pilot completed on enduser site</inlineHelpText>
    <label>(B) Our technology specified by enduser?</label>
    <type>Checkbox</type>
</CustomField>