force-app/main/default/objects/Opportunity/fields/Update_product_change__c.field-meta.xml
<CustomField>
    <fullName>Update_product_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update product change</label>
    <type>Checkbox</type>
</CustomField>