force-app/main/default/objects/Opportunity/fields/Weighted_amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_amount__c</fullName>
    <formula>Grand_Total_NXF__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>