force-app/main/default/objects/Opportunity/fields/When_is_Planning_Approved__c.field-meta.xml
<CustomField>
    <fullName>When_is_Planning_Approved__c</fullName>
    <label>When is Planning Approved?</label>
    <type>DateTime</type>
</CustomField>