force-app/main/default/objects/Opportunity/fields/Who_has_Planning_Approved__c.field-meta.xml
<CustomField>
    <fullName>Who_has_Planning_Approved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who has Planning Approved?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>