force-app/main/default/objects/Opportunity/recordTypes/Pilot.recordType-meta.xml
<RecordType>
    <fullName>Pilot</fullName>
    <active>true</active>
    <businessProcess>Pilot</businessProcess>
    <label>Pilot</label>
</RecordType>