force-app/main/default/objects/Opportunity/validationRules/Approve_Pilot_Planning.validationRule-meta.xml
<ValidationRule>
    <fullName>Approve_Pilot_Planning</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

ISCHANGED(Planning_Approved_Pilot_Team__c),
NOT($User.Id = &quot;0050900000AiU9c&quot;)
)

||

AND(

ISNEW(),
Planning_Approved_Pilot_Team__c = true,
NOT($User.Id = &quot;0050900000AiU9c&quot;)
)</errorConditionFormula>
    <errorDisplayField>Planning_Approved_Pilot_Team__c</errorDisplayField>
    <errorMessage>You do not have permission to approve Pilot Planning.</errorMessage>
</ValidationRule>