force-app/main/default/objects/Opportunity/validationRules/Cannot_close_won_without_products.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_close_won_without_products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Opportunity_Products__c = 0,
ISPICKVAL(StageName, &quot;Closed Won&quot;)
)</errorConditionFormula>
    <errorMessage>Add opportunity products</errorMessage>
</ValidationRule>