force-app/main/default/objects/Opportunity/validationRules/Cannot_Select_Pilot_Planning_Neccessary.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Select_Pilot_Planning_Neccessary</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordTypeId = &quot;01209000001iDNU&quot;,
NOT(ISPICKVAL(Pilot_Planning_Neccesarry__c, &quot;No&quot;)),
Probability &lt; 0.5

&amp;&amp;

OR(
NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
NOT(ISPICKVAL(StageName, &quot;Canceled&quot;))
)


)</errorConditionFormula>
    <errorMessage>You cannot select &quot;Yes&quot; for &quot;Pilot Approval Necessary&quot;. This can only be done when the probability is greater or equal than 50%.</errorMessage>
</ValidationRule>