force-app/main/default/objects/Opportunity/validationRules/Fill_in_Pilot_Goal.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_in_Pilot_Goal</fullName>
    <active>true</active>
    <description>When checkbox Is Pilot is checked, then fill in Pilot Goal.</description>
    <errorConditionFormula>AND(
Is_Pilot__c = true,
ISPICKVAL(Pilot_Goal__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Fill in the Pilot Goal.</errorMessage>
</ValidationRule>