force-app/main/default/objects/Opportunity/validationRules/Opportunity_Quote_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Quote_Submission</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

ISPICKVAL(StageName, &quot;Quote Submission&quot;),

NOT(ISPICKVAL(StageName, &quot;Negotiation&quot;)),
NOT(ISPICKVAL(StageName, &quot;Order Promised&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
NOT(ISPICKVAL(StageName, &quot;Canceled&quot;)),


NOT(ISPICKVAL(SyncedQuote.Status, &quot;Quote Submission&quot;))

)</errorConditionFormula>
    <errorMessage>Please mark Quote Status to &quot;Quote Submission&quot;</errorMessage>
</ValidationRule>