force-app/main/default/objects/Opportunity/validationRules/Opportunity_Type_Restricted_For_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Type_Restricted_For_Project</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

RecordTypeId = &quot;01209000001iDNZ&quot;,

ISBLANK(TEXT(Type)),

ISNEW()


)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>To continue please select a value</errorMessage>
</ValidationRule>