force-app/main/default/objects/Opportunity/validationRules/Pilot_planning_needs_to_be_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Pilot_planning_needs_to_be_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND (

Planning_Approved_Pilot_Team__c = false,
IsWon = true,
RecordTypeId = &apos;01209000001iDNUAA2&apos;

)</errorConditionFormula>
    <errorMessage>Pilot Planning needs to be approved before close won the opportunity</errorMessage>
</ValidationRule>