force-app/main/default/objects/Opportunity/validationRules/Quote_need_to_be_docusigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_need_to_be_docusigned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
NOT(ISPICKVAL(SyncedQuote.DocuSigned__c, &quot;Yes&quot;)
))</errorConditionFormula>
    <errorMessage>Synced Quote need to be Docusigned before Closed Won.</errorMessage>
</ValidationRule>