force-app/main/default/objects/Opportunity/validationRules/Requested_Order_Date_greater_then_Expect.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Order_Date_greater_then_Expect</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Delivery_Date__c &lt;= CloseDate</errorConditionFormula>
    <errorMessage>Please ensure that the expected order date is earlier than the requested delivery date.</errorMessage>
</ValidationRule>