force-app/main/default/objects/Opportunity/validationRules/Synced_Quote_needs_to_be_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Synced_Quote_needs_to_be_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

IsWon = true

&amp;&amp;

OR(

ISBLANK(SyncedQuoteId),
NOT(ISPICKVAL(SyncedQuote.Approval_Status__c, &quot;Approved&quot;))

))</errorConditionFormula>
    <errorMessage>The Quote needs to be Synced and Approved before you can close / won an opportunity.</errorMessage>
</ValidationRule>