force-app/main/default/objects/Opportunity/validationRules/When_Pilot_Goal_research_no_MainPilotOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Pilot_Goal_research_no_MainPilotOpp</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Pilot_Goal__c, &quot;Research&quot;),
NOT(ISBLANK(Linked_Pilot__c))
)</errorConditionFormula>
    <errorMessage>You cannot choose a Main Pilot Opportunity when you selected Pilot Goal &apos;Research&apos;.</errorMessage>
</ValidationRule>