force-app/main/default/objects/Opportunity/validationRules/You_cannot_edit_stage_when_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_edit_stage_when_closed_won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;) ,
ISCHANGED(StageName)

)

&amp;&amp; 

$Permission.Permission_to_edit_closed_opportunities = false</errorConditionFormula>
    <errorMessage>You cannot edit the stages of the Opportunity when it is Closed Won.</errorMessage>
</ValidationRule>