force-app/main/default/objects/Opportunity/listViews/All_Opportunities_Americas.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Americas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Linked_Pilot__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Account_Country__c</field>
        <operation>contains</operation>
        <value>Canada,United States</value>
    </filters>
    <label>All Opportunities North-America</label>
    <sharedTo>
        <role>Board</role>
        <role>CCO</role>
    </sharedTo>
</ListView>