force-app/main/default/objects/Opportunity/listViews/All_Opportunities_Steve_Wait.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Steve_Wait</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Linked_Pilot__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>PMC_Global_Opp__c</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Canceled</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
        <value>Wait</value>
    </filters>
    <label>All Opportunities Steve Wait</label>
    <sharedTo>
        <group>NW_USA_CAD_USA</group>
    </sharedTo>
</ListView>