force-app/main/default/objects/Opportunity/listViews/All_Opportunities_w_o_linked_pilots.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_w_o_linked_pilots</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Linked_Pilot__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Linked_Pilot__c</field>
        <operation>equals</operation>
    </filters>
    <label>Opportunities w/o linked pilots</label>
</ListView>