force-app/main/default/objects/Opportunity/listViews/All_Opportunities_with_WON_pilots.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_with_WON_pilots</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>PMC_Global_Opp__c</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Linked_Pilot__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Opportunity_number_Helper_2__c</columns>
    <columns>Number_of_days_since_last_stage_change__c</columns>
    <columns>Linked_Pilot_Stage_of_Pilot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Canceled</value>
    </filters>
    <filters>
        <field>Linked_Pilot_Stage_of_Pilot__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>All Opportunities with WON pilots</label>
</ListView>