force-app/main/default/objects/Opportunity/listViews/Closed_All_Won.listView-meta.xml
<ListView>
    <fullName>Closed_All_Won</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Pilot,Opportunity.Project</value>
    </filters>
    <label>Closed - All Won</label>
</ListView>