force-app/main/default/objects/Opportunity/listViews/HOTLIST.listView-meta.xml
<ListView>
    <fullName>HOTLIST</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Project_Destination__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Status_Description__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>Linked_Pilot__c</columns>
    <columns>Days_between_last_and_first_closed_date__c</columns>
    <columns>Main_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Hot_Opportunity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>*HOTLIST*</label>
</ListView>